Ajustes tela mobile

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 segurança</label>
             <section class="d-flex justify-content-center text-white text-center flex-wrap bd-highlight ">
 
-                <section class="bd-highlight p-2 card-equipamentos ">
+                <section class="bd-highlight p-2 card-equipamentos mt-2">
                     <section class="bd-highlight ">
                         <img src="img/aug-transparente-preta.png" alt="Arma" width="100px">
                     </section>
@@ -210,7 +210,7 @@
                             SNIPER</label>
                     </section>
                 </section>
-                <section class="bd-highlight p-2 "
+                <section class="bd-highlight p-2 mt-2"
                     style="background-color: rgba(208, 213, 203, 0.7); border-radius: 5px;  margin-right: 1%;">
                     <section class="bd-highlight ">
                         <img src="img/colete_transparente_preto.png" alt="Colete" width="100px">
@@ -235,7 +235,7 @@
                             Colete</label>
                     </section>
                 </section>
-                <section class="bd-highlight p-2 "
+                <section class="bd-highlight p-2 mt-2 "
                     style="background-color: rgba(208, 213, 203, 0.7); border-radius: 5px;  margin-right: 1%;">
                     <section class="bd-highlight ">
                         <img src="img/roupa_transparente_preta.png" alt="arma" width="100px">
@@ -279,7 +279,7 @@
     <section class="row p-2" style="--bs-gutter-x:0rem!important; background-color: #393B4A;">
         <h1 class="text-white" style="text-align: center;">PREÇO</h1>
         <section class="d-flex justify-content-center text-white text-center flex-wrap bd-highlight ">
-            <section class="bd-highlight card-price">
+            <section class="bd-highlight card-price mt-2">
                 <section class="header-price">
                     Pacote Completo</section>
                 <section><span style="font-size: 32px;">R$</span> <span style="font-size: 60px;">30</span>
@@ -299,7 +299,7 @@
                 <section class="body-price"> <img src="img/shirt.png" alt="arma" width="30px%"> Roupa</section>
                 <section class="p-2"><button class="btn btn-sm btn-success p-2">Entre em contato</button></section>
             </section>
-            <section class="bd-highlight card-price">
+            <section class="bd-highlight card-price mt-2">
                 <section class="header-price">
                     Pacote Completo</section>
                 <section><span style="font-size: 32px;">R$</span> <span style="font-size: 60px;">30</span>
@@ -319,7 +319,7 @@
                 <section class="body-price"> <img src="img/shirt.png" alt="arma" width="30px%"> Roupa</section>
                 <section class="p-2"><button class="btn btn-sm btn-success p-2">Entre em contato</button></section>
             </section>
-            <section class="bd-highlight card-price">
+            <section class="bd-highlight card-price mt-2">
                 <section class="header-price">
                     Pacote Personalizado</section>
                 <section><span style="font-size: 32px;">Personalizado</span>
@@ -351,7 +351,7 @@
                     <img src="img/LOGO_TRANSPARENTE.png" width="250px" height="250px" />
                 </section>
             </section>
-            <section class="bd-highlight " style="width: 40%;">
+            <section class="bd-highlight form-contato " >
                 <section class="d-flex flex-column bd-highlight mb-3">
                     <section class="p-2 bd-highlight text-roda-pe-two">
                         <h1>Fale Conosco</h1>
